--- a/application.properties
+++ b/application.properties
@@ -1,3 +1,3 @@
 insurance.provider.url=http://localhost:8080/insurance-service/getUpdatePlans
-service-port=8080
-service-name=learning
+service.port=8080
+service.name=learning
